# OxcResolver

./: CHANGELOG.md  Cargo.toml  DEPENDENTS.md  LICENSE  README.md  deny.toml  package.json  pnpm-workspace.yaml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml
Documentation/: index.html  modules.html
Documentation/assets/: highlight.css
Source/: builtins.rs  cache.rs  context.rs  error.rs  file_system.rs  lib.rs  options.rs  package_json.rs  path.rs  resolution.rs  specifier.rs  tsconfig.rs
benches/: resolver.rs
examples/: resolver.rs
fixtures/pnpm/: package.json
fixtures/pnpm8/: pnpm-lock.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: resolver.rs
napi/: Cargo.toml  browser.js  index.d.ts  index.js  resolver.wasi-browser.js  resolver.wasi.cjs  test.mjs  wasi-worker-browser.mjs  wasi-worker.mjs
napi/Source/: lib.rs  options.rs  tracing.rs
npm/: README.md  package.json
