[[bin]]
bench = false
doc = false
name = "resolver"
path = "fuzz_targets/resolver.rs"
test = false

[dependencies]
libfuzzer-sys = "0.4.9"
oxc_resolver = { path = ".." }

[package]
edition = "2024"
name = "resolver_fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]
