[build-dependencies]
napi-build = "2.1.3"

[dependencies]
napi = { version = "3.0.0-alpha", default-features = false, features = ["napi3", "serde-json"] }
napi-derive = { version = "3.0.0-alpha" }
oxc_resolver = { path = ".." }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "fmt"] } # Omit the `regex` feature

[lib]
crate-type = ["cdylib"]
doctest = false
path = "Source/lib.rs"
test = false

[package]
edition = "2021"
name = "oxc_napi_resolver"
publish = false
rust-version = "1.71"
version = "0.0.0"

[package.metadata]

[package.metadata.cargo-machete]
ignored = ["napi"]
