[build-dependencies]
napi-build = "2.1.4"

[dependencies]
napi = { version = "3.0.0-alpha.28", default-features = false, features = ["napi3", "serde-json"] }
napi-derive = { version = "3.0.0-alpha.26" }
oxc_resolver = { path = ".." }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["std", "fmt"] } # Omit the `regex` feature

[lib]
crate-type = ["cdylib"]
doctest = false
path = "Source/lib.rs"
test = false

[package]
edition = "2024"
name = "oxc_napi_resolver"
publish = false
rust-version = "1.85.0"
version = "0.0.0"

[package.metadata]

[package.metadata.cargo-machete]
ignored = ["napi"]
