[build-dependencies]
napi-build = "2.1.4"

[dependencies]
napi = { version = "3.0.0-alpha.28", default-features = false, features = ["napi3", "serde-json"] }
napi-derive = { version = "3.0.0-alpha.26" }
oxc_resolver = { path = ".." }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["std", "fmt"] } # Omit the `regex` feature

[lib]
crate-type = ["cdylib"]
doctest = false
path = "Source/lib.rs"
test = false

[dependencies]
ctor = "0.3.4"
napi = { version = "3.0.0-alpha", default-features = false, features = ["napi3", "serde-json"] }
napi-derive = { version = "3.0.0-alpha" }
oxc_resolver = { path = ".." }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "fmt"] } # Omit the `regex` feature

[package.metadata]

[package.metadata.cargo-shear]
ignored = ["ctor"]
